# burncloud-gcp-gemini-image

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  dog_generation_response.txt
src/: 4k.rs  extract_image.rs  generate_dog.rs  main.rs
