[package]
name = "gemini-image-test"
version = "0.1.0"
edition = "2021"
default-run = "4k"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "4k"
path = "src/4k.rs"

[[bin]]
name = "extract_image"
path = "src/extract_image.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
dotenv = "0.15"
regex = "1.0"